--- a/my_website/aboutme.html
+++ b/my_website/aboutme.html
@@ -4,7 +4,7 @@
 	    <meta charset="utf-8">
 	    <title>About me...</title>
 	  </head>
-      <body style="background-src=images/windows98.png">
+      <body>
     <a href="index.html">Home</a>
     <a href="portfolio.html">Portfolio</a>
     <a href="aboutme.html">About Me</a>
